re-factored to reuse the project specific exceptions when creating the order